--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.4.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,7 +14,6 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
     "react-material-ui-form-validator": "^3.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
