--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,8 @@
   "devDependencies": {
     "autoprefixer": "^9",
     "cypress": "^10.4.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
