--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^9",
-    "cypress": "^10.4.0",
+    "cypress": "^13.7.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "^7.30.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "craco --openssl-legacy-provider start",
     "build": "craco build",
     "test": "cypress open",
     "eject": "react-scripts eject",
